# bevy-jam-6

./: Cargo.toml
assets/shaders/: link.wgsl  lumina.wgsl  starfield.wgsl
src/: main.rs
src/materials/: link_material.rs  lumina_material.rs
src/plugins/: chunks.rs  energy.rs  energy_display.rs  game_loop.rs  main_menu.rs  pause_menu.rs  scaling.rs  ship.rs  shop.rs  story.rs
