[package]
name = "bevy-jam-6"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking", "file_watcher"] }
bevy-inspector-egui = "0.31.0"
bevy_egui = "0.34.1"
iyes_perf_ui = "0.5.0"
rand = "0.9.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
